--- a/TaskManager1/TaskManager1.csproj
+++ b/TaskManager1/TaskManager1.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bug.cs" />
+    <Compile Include="Comment.cs" />
+    <Compile Include="feature.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="project.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task.cs" />
+    <Compile Include="user.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
